--- a/mappings/name_mapping.json
+++ b/mappings/name_mapping.json
@@ -80,9 +80,9 @@
 "Census_2018_Dwelling_dampness_indicator_Total_occupied_private_dwellings": "damp_total_occ",
 "Census_2018_Dwelling_mould_indicator_01_Mould_over_A4_size_always_occupied_private_dwellings": "mo_o_a4_a",
 "Census_2018_Dwelling_mould_indicator_02_Mould_over_A4_size_sometimes_occupied_private_dwellings": "mo_o_a4_s",
-"Census_2018_Dwelling_mould_indicator_Total_mouldy_dwellings_occupied_private_dwellings": "mould_t",
+"Census_2018_Dwelling_mould_indicator_Total_mouldy_dwellings_occupied_private_dwellings": "mould_t_oc",
 "Census_2018_Dwelling_mould_indicator_03_No_mould_mould_smaller_than_A4_size_occupied_private_dwellings": "mould_no",
-"Census_2018_Dwelling_mould_indicator_Total_stated_occupied_private_dwellings": "mould_t",
+"Census_2018_Dwelling_mould_indicator_Total_stated_occupied_private_dwellings": "mould_t_s",
 "Census_2018_Dwelling_mould_indicator_99_Not_elsewhere_included_occupied_private_dwellings": "mould_o",
 "Census_2018_Dwelling_mould_indicator_Total_occupied_private_dwellings": "mould_t_o"
 }
